--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "my-json-api",
+  "name": "my-backend",
   "version": "1.0.0",
-  "description": "A simple JSON server API",
-  "main": "server.js",
+  "description": "Backend with JSON Server + Express",
+  "license": "ISC",
+  "author": "",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "json-server --host 0.0.0.0 --watch db.json --port 10000"
+    "start:json": "json-server --host 0.0.0.0 --watch db.json --port 10000",
+    "start:express": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "json-server": "^0.17.0"
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "json-server": "^0.17.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
+    "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
