--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+      "start": "node index.js",
     "start:json": "json-server --host 0.0.0.0 --watch db.json --port 10000",
     "start:express": "node index.js",
     "dev": "nodemon index.js"
